--- a/Project_Machine.ipynb
+++ b/Project_Machine.ipynb
@@ -98,8 +98,8 @@
       ],
       "source": [
         "# download from kaggle\n",
-        "os.environ['KAGGLE_USERNAME'] = \"stravij\"\n",
-        "os.environ['KAGGLE_KEY'] = \"69ba28f80a721a872976d2414a2d4d72\"\n",
+        "os.environ['KAGGLE_USERNAME'] = \"xxxxxx\"\n",
+        "os.environ['KAGGLE_KEY'] = \"xxxxxxx\"\n",
         "\n",
         "!kaggle datasets download maharshipandya/-spotify-tracks-dataset"
       ]
